deployments/ceph-clusters/ceph-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
  name: ceph-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              number: 9091
        path: /ceph
        pathType: Prefix
